# lipidator-toolkit

./: CMakeLists.txt  FindXDR.cmake  Makefile  auxiliary.hpp  charmm.ldx  cmake_install.cmake  config.hpp  diffgeom.hpp  director.cpp  funcfit.hpp  grofile.hpp  height.cpp  histogram.hpp  instafit.cpp  lipidrecsum.hpp  ndxtool.hpp  slipids.ldx  testcube.cpp
directors/: charmm.ldx  martini.ldx
kiss_fft130/: ._kiss_fft_guts.h.swp
trjflib/: atominfo.hpp  auxiliary.hpp  md.hpp  minimath.hpp  topology.hpp  trformats.hpp
