PROJECT(xyzparse)
FIND_PACKAGE( OpenMP )
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
set(CMAKE_BUILD_TYPE "release")
INCLUDE_DIRECTORIES(".")
INCLUDE_DIRECTORIES("trjflib")
INCLUDE_DIRECTORIES("/usr/include/eigen3")
INCLUDE_DIRECTORIES("kiss_fft130")
link_directories(".")
cmake_policy(SET CMP0015 NEW)
find_package(Eigen3 REQUIRED)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/.")
find_package(XDR REQUIRED)
include_directories(EIGEN3_INCLUDE_DIR)
    cmake_minimum_required(VERSION 2.8)

ADD_EXECUTABLE(height height.cpp  kiss_fft130/tools/kiss_fftnd.c kiss_fft130/kiss_fft.c )
ADD_EXECUTABLE(director director.cpp  kiss_fft130/tools/kiss_fftnd.c kiss_fft130/kiss_fft.c)
ADD_EXECUTABLE(resis instafit.cpp )
ADD_EXECUTABLE(testcube testcube.cpp kiss_fft130/tools/kiss_fftnd.c kiss_fft130/kiss_fft.c )

